# cache-behavior-tests

./: .gitignore  CMakeLists.txt  README.md  cachegrind.out.12268  cachegrind.out.12336  cachegrind.out.12359  cachegrind.out.12395  cachegrind.out.12936  cachegrind.out.13155  cachegrind.out.13801  cachegrind.out.14345  cachegrind.out.16809  cachegrind.out.16818  cachegrind.out.17304  cachegrind.out.17471  cachegrind.out.17667  cachegrind.out.18046  callgrind.out.11941  callgrind.out.12236  ejercicio1  ejercicio1.cpp  ejercicio2  ejercicio2.cpp  ejercicio3  plot_comparison.py  run_analysis.sh  run_tests.sh
result/: cachegrind_100.out  cachegrind_1000.out  cachegrind_1000.txt  cachegrind_1500.out  cachegrind_20.txt  cachegrind_2000.out  cachegrind_500.out  cachegrind_500.txt  cachegrind_64.txt  times.csv  times.txt  times_block_classic.csv  times_row_column.csv
sources/: main.cpp  main_row_column.cpp  matrix_utils.cpp  matrix_utils.h  row_column.cpp  row_column.h
